record of all notable changes in each version released.

Version strings conform to the `Semantic Versioning`_ specification,
`version 2.0.0 <http://semver.org/spec/v2.0.0.html>`__.

..  _change log: http://keepachangelog.com/
..  _Semantic Versioning: https://semver.org/


Version NEXT
============

:Released: FUTURE
:Maintainer: UNKNOWN <unknown@example.org>

Changed:

* Speed daemon start time by computing candidate file descriptors once.

  Closes: Pagure #40. Thanks to Alex Pyrgiotis for the report.

Removed:

* Drop backward-compatible helpers that provided Python 2 support.

  * declaration of source encoding ‘utf-8’
  * absolute_import
  * unicode_literals
  * module-level metaclass `type`
  * unification of str with unicode type
  * renamed standard library exceptions and modules
  * raise exception from context exception

  All these are default behaviour in Python 3 and need no special
  handling.


Version 2.3.0
=============

:Released: 2021-02-21
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

Removed:

* Remove support for Python versions older than Python 3.

  Python 2 has been unsupported by the Python project since 2020.

* Remove dependency on back-ported `unittest2` and `mock`.
  Depend instead on standard library `unittest` and `unittest.mock`.

  Thanks to Michał Górny for the merge requests.


Version 2.2.4
=============

:Released: 2019-10-27
:Maintainer: Ben Finney <ben+python@benfinney.id.au>

Bugs Fixed:

* Run the Setuptools `egg-info` command as part of the `build`
  command.

  Closes: Pagure #31. Thanks to Stanislav Levin for the bug report and
  diagnosis.

* Create the socket and catch “non-socket” errors.

  Closes: Pagure #34. Thanks to Miro Hrončok for the bug report and
  patch.

* Only deal with a range of file descriptors if the range is not empty.

  Closes: Pagure #39. Thanks to Alex Pyrgiotis for the test scenario.

* Declare Twine as a build dependency.
